--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@phosphor-icons/react": "^2.1.7",
     "@reduxjs/toolkit": "^2.5.1",
     "next": "15.1.6",
     "react": "^19.0.0",
